# Ballistics-Analyzer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  Dockerfile  LICENSE  MAKEFILE  MIGRATION_SUMMARY.md  Makefile  PKGBUILD  PRIVACY_POLICY.md  README-android-arch.md  README.md  build-web.sh  build.sh  debug-build.sh  docker-compose.yml  fix-files.sh  index.html  ironsights-signing-key.asc  manifest.json  package.json  rename-to-ironsights.sh  sw.js
.github/workflows/: MERGE_STRATEGY.md  build-android-arch.yml  build-android.yml  build-desktop.yml  build.yml
assets/: README.md
backup_20250824_181436/: Cargo.toml
ballistics-desktop/: Cargo.toml  build.rs
ballistics-desktop/src/: hardware.rs  main.rs  storage_handler.rs  ui.rs
ballistics-desktop/src/hardware/: mod.rs
ballistics-desktop/src/ui/: mod.rs
ballistics-mobile/: Cargo.toml  build.rs
ballistics-mobile/android/: MainActivity.kt
ballistics-mobile/android/app/: build.gradle  proguard-rules.pro
ballistics-mobile/android/app/src/main/: AndroidManifest.xml
ballistics-mobile/android/app/src/main/java/com/ballistics/analyzer/: MainActivity.kt
ballistics-mobile/android/app/src/main/java/com/ballisticsanalyzer/mobile/: NativeLib.java
ballistics-mobile/android/app/src/main/res/values/: strings.xml  themes.xml
ballistics-mobile/android/app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
ballistics-mobile/ios/: BallisticsApp.swift
ballistics-mobile/src/: app.rs  app_update_fix.rs  lib.rs  storage.rs  storage_handler.rs
ballistics-mobile/src/platform/: android.rs  ios.rs  mod.rs
ballistics-mobile/src/ui/: calculation_view.rs  main_view.rs  main_view.rs.orig  mod.rs  profile_view.rs  settings_view.rs
ballistics-wasm/: Cargo.toml  build.rs  index.html  manifest.json  style.css  sw.js
ballistics-wasm/src/: app.rs  lib.rs  storage.rs
ballistics-wasm/src/ui/: main_view.rs  mod.rs  profile_view.rs  settings_view.rs
ballistics_core/: Cargo.toml
ballistics_core/src/: auth.rs  ballistics.rs  data_card.rs  firearm_profiles.rs  lib.rs  load_data.rs  models.rs  nostr_integration.rs  sharing.rs  sharings.rs  storage.rs  utils.rs
ironsights-desktop/: Cargo.toml  build.rs
ironsights-desktop/src/: main.rs  storage_handler.rs
ironsights-desktop/src/hardware/: mod.rs
ironsights-desktop/src/platform/: mod.rs
ironsights-desktop/src/ui/: mod.rs
ironsights-mobile/: Cargo.toml  build.gradle
ironsights-mobile/android/: gradlew  settings.gradle
ironsights-mobile/android/app/: build.gradle
ironsights-mobile/android/app/src/main/: AndroidManifest.xml
ironsights-mobile/android/app/src/main/java/com/ballisticsanalyzer/mobile/: MainActivity.java
ironsights-mobile/android/app/src/main/res/values/: colors.xml  themes.xml
ironsights-mobile/src/: lib.rs
ironsights_core/: Cargo.toml
ironsights_core/src/: auth.rs  ballistics.rs  calculation.rs  data_card.rs  export.rs  gui.rs  models.rs  storage.rs  units.rs  utils.rs
migrations/: init_ammo_db.sql
scripts/: analyze-deps.sh  build-all.sh  build-android-arch.sh  build-android.sh  build-desktop.ps1  build-desktop.sh  build-optimized.sh  build-wasm.sh  create-appimage.sh  create-macos-bundle.sh  create-pkgbuild.sh  create-windows-installer.ps1  fix-workspace-deps.sh  fix-workspace.sh  install-arch.sh  setup-android-build.sh  setup-android.sh  test-build.sh
src/: app.rs  auth.rs  ballistics.rs  build.rs  firearm_profiles.rs  hardware.rs  lib.rs  load_data.rs  main.rs  models.rs  pwa.rs  relay.rs  sharing.rs  storage.rs  ui.rs
src/storage/: web_storage.rs
