[package]
name = "ballistics-analyzer"
version = "1.0.0"
edition = "2021"
authors = ["Ballistics Analyzer Contributors"]
description = "Professional ballistics calculator with hardware integration"
license = "MIT"
repository = "https://github.com/DatilDev/Ballistics-Analyzer"
keywords = ["ballistics", "trajectory", "shooting", "calculator", "nostr"]
categories = ["science", "simulation"]

[dependencies]
# Core GUI framework
egui = "0.29"
egui_extras = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.10", features = ["v4", "serde", "js"] }
rand = { version = "0.8", features = ["getrandom"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
futures = "0.3"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

# Desktop-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.29", default-features = true }
egui_plot = "0.29"
webbrowser = "1.0"
env_logger = "0.11"
tracing = "0.1"

# Database with bundled SQLite
rusqlite = { version = "0.32", features = ["bundled"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

rfd = "0.15"
dirs = "5.0"

# Nostr with vendored secp256k1
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
nostr = { version = "0.35", default-features = false }
nostr-sdk = { version = "0.35", default-features = false, features = ["sqlite", "nip04", "nip07"] }

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }

# Crypto - use pure Rust implementations
ring = { version = "0.17", features = ["std"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Clipboard
arboard = { version = "3.4", default-features = false }

# Serial port (optional)
serialport = { version = "4.5", optional = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_plot = "0.29"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document", 
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "Storage",
    "Location",
    "console",
] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

# Android dependencies
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"

[features]
default = ["desktop"]
desktop = []
web = []
android = []
hardware = ["serialport"]

[lib]
name = "ballistics_analyzer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ballistics-analyzer"
path = "src/main.rs"
required-features = ["desktop"]

# Force vendored/bundled builds
[env]
RUSQLITE_BUNDLED = "1"
LIBSQLITE3_SYS_BUNDLING = "1"