[package]
name = "ballistics-analyzer"
version = "1.0.0"
edition = "2021"
authors = ["Ballistics Analyzer Contributors"]
description = "Professional ballistics calculator with hardware integration"
license = "MIT"
repository = "https://github.com/DatilDev/Ballistics-Analyzer"
keywords = ["ballistics", "trajectory", "shooting", "calculator", "nostr"]
categories = ["science", "simulation"]

[dependencies]
# Core GUI framework
egui = "0.29"
egui_extras = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities - with WASM support
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = { version = "0.8" }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
futures = "0.3"
hex = "0.4"

# Desktop-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.29", default-features = true }
egui_plot = "0.29"
webbrowser = "1.0"
env_logger = "0.11"
tracing = "0.1"

# Database - force bundled to avoid linking issues
rusqlite = { version = "0.32", features = ["bundled"] }

rfd = "0.15"
dirs = "5.0"

# Nostr SDK with vendored crypto
nostr-sdk = { version = "0.35", default-features = false, features = [
    "nip04", 
    "nip44", 
    "nip46", 
    "nip07",
    "sqlite"
] }

# Use vendored secp256k1
secp256k1 = { version = "0.29", default-features = false, features = ["std", "rand-std", "global-context"] }

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false }

# Use rustls instead of native TLS (correct package name)
rustls = { version = "0.23", default-features = false, features = ["std"] }

# Ring crypto library
ring = { version = "0.17", features = ["std"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Clipboard
arboard = { version = "3.4", default-features = false, features = ["wayland-data-control"] }

# Serial port (optional, only for Linux)
[target.'cfg(target_os = "linux")'.dependencies]
serialport = { version = "4.5", optional = true }
libudev = { version = "0.3", optional = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_plot = "0.29"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

# Override chrono and uuid for WASM
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.10", features = ["v4", "serde", "js"] }

web-sys = { version = "0.3", features = [
    "Window",
    "Document", 
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "Storage",
    "Location",
    "console",
] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

# Android dependencies
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = "3.12"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"

[features]
default = ["desktop"]
desktop = []
web = []
android = []
hardware = ["serialport", "libudev"]

[lib]
name = "ballistics_analyzer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ballistics-analyzer"
path = "src/main.rs"
required-features = ["desktop"]

# Remove the patch section that was causing issues
# [patch.crates-io]
# ring = { git = "https://github.com/briansmith/ring", features = ["std"] }