[workspace]
resolver = "2"
members = [
    "ballistics_core",
    "ballistics-desktop",
    "ballistics-mobile", 
    "ballistics-wasm",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Ballistics Analyzer Contributors"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures = "0.3"

# GUI
egui = "0.28"
egui_extras = { version = "0.28", features = ["image"] }
egui_plot = "0.28"
eframe = { version = "0.28", default-features = true }

# Database - Match nostr-sdk's rusqlite version
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }

# Async
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"

# Nostr
nostr = "0.35"
nostr-sdk = "0.35"
secp256k1 = "0.29"

# Platform specific
rfd = "0.15"
dirs = "5.0"
webbrowser = "1.0"
arboard = { version = "3.0", default-features = false }
env_logger = "0.11"
tracing = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serialport = "4.0"

# WASM specific
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
web-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Mobile specific
android-activity = "0.6"
android_logger = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = "fat"

[profile.dev]
opt-level = 1

# Deny dangerous patterns
unsafe_code = "deny"
