[package]
name = "ballistics-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ballistics_core = { path = "../ballistics_core", features = ["gui", "nostr"] }

# WASM framework
eframe = { workspace = true, features = ["glow"] }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }  # Only defined once
console_error_panic_hook = { workspace = true }
tracing-wasm = { workspace = true }

# JavaScript APIs
js-sys = "0.3"

# Web APIs
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element", 
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",  # Add for clipboard workaround
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Navigator",
    "Storage",
    "Location",
    "History",
    "MediaQueryList",
    "Clipboard",
    "ClipboardEvent",
    "console",
] }

# WASM-compatible dependencies
getrandom = { workspace = true, features = ["js"] }
uuid = { workspace = true, features = ["js"] }
chrono = { workspace = true, features = ["wasmbind"] }

# Nostr for web
nostr-sdk = { workspace = true, features = ["nip07"] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[package.metadata.wasm-pack]
"wasm-opt" = ["-Oz", "--enable-simd"]