
[package]
name = "ironsights_core"
version = "1.0.0"
edition = "2021"
authors = ["IronSights Contributors"]
license = "MIT"

[dependencies]
# Core dependencies (always included)
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Optional dependencies
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }
nostr-sdk = { workspace = true, optional = true }
secp256k1 = { workspace = true, optional = true }

# Storage (not for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
r2d2_sqlite = { workspace = true, optional = true }

[features]
default = ["gui", "storage"]
gui = ["dep:egui", "dep:egui_extras", "dep:egui_plot"]
storage = ["dep:rusqlite", "dep:r2d2", "dep:r2d2_sqlite"]
nostr = ["dep:nostr-sdk", "dep:secp256k1"]
async = ["dep:tokio", "dep:futures"]
hardware = []
logging = ["dep:env_logger"]

[lib]
name = "ironsights_core"
path = "src/lib.rs"
